# VisCom-Thesis

./: .editorconfig  .gitignore  README.md  docker-compose.yml  graph_drawing.py  index.html  notes.md
assets/: MainLayout-3LcNqXGR.js  (+21 more)
commgraph_backend/: pyproject.toml
commgraph_backend/src/commgraph_backend/: generics.py  main.py  test.py
commgraph_backend/src/commgraph_backend/commgraph/: channel.py  converter.py  graph.py  link.py  message_type.py  node.py  topic.py
latex-helper/: latexNodeScoreTable.ipynb  metricAnalyzer.ipynb  metricAnalyzerNew.ipynb  metricPlotter.ipynb  pyproject.toml  sortinComparison.ipynb
latex-helper/latexData/metrics/: metrics_0006_ROSE_2025-04-15T11-27-37.json  metrics_0006_broadcast_2025-04-06T13-53-26.json  metrics_0006_real_2025-04-06T13-58-08.json  metrics_0006_selfdrivingCar_2025-04-15T11-30-13.json  metrics_0008_ROSE_2025-04-15T11-33-28.json  metrics_0012_Broadcast_2025-04-15T22-48-21.json  metrics_0013_HandcraftedMotor_2025-04-15T11-43-07.json  metrics_0013_Motor_2025-04-06T14-12-59.json  metrics_0021_ROSE_2025-04-15T11-45-51.json  metrics_0026_ROSE_2025-04-06T14-17-50.json  metrics_0026_ROSE_2025-04-15T11-49-10.json  metrics_0122_Singulate_2025-04-15T11-59-55.json  metrics_Broadcast12_2025-04-04T01-28-15.json  metrics_S_0025_Dense_2025-04-15T12-15-50.json  metrics_S_0025_Sparse_2025-04-15T12-18-26.json  metrics_S_0050_Dense_2025-04-15T12-24-12.json  metrics_S_0050_Sparse_2025-04-15T13-18-20.json  metrics_S_0050_sparse_2025-04-06T14-40-10.json  metrics_S_0075_Dense_2025-04-15T13-24-01.json  metrics_S_0075_Sparse_2025-04-15T15-47-05.json  metrics_S_0100_Dense_2025-04-15T15-38-27.json  metrics_S_0100_Sparse_2025-04-15T14-21-39.json  metrics_S_0150_Dense_2025-04-15T13-57-00.json  metrics_S_0150_Sparce_2025-04-06T16-06-03.json  metrics_S_0150_Sparse_2025-04-15T14-16-47.json  metrics_S_150_Dense_2025-04-04T01-48-52.json
latex-helper/latexData/nodescore/: nodescore_with_broadcast.csv  nodescore_without_broadcast.csv
latex-helper/latexData/sortings/: metrics_SortingComparison_2025-04-11T10-11-48.json
latex-helper/src/viscom_metrics/: util.py
viscom_backend/: Dockerfile  compose.yml  hello.py  pyproject.toml
viscom_backend/latexData/: nodescore_with_broadcast.csv
viscom_backend/src/viscom_backend/: converter.py  main.py  test.py
(+351 files in other folders)
