[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "commgraph-backend"
version = "0.1.0"
authors = [
  { name="Valentin Schröter", email="valentin.schroeter@student.hpi.uni-potsdam.de" },
]
description = "Commandline tool to export the meta information of a ROS package."
# readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'networkx',
  'flask',
  'flask_cors',
]

[project.urls]

[project.scripts]
# rosmetasys = "rosmetasys.cli:cli"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
