[project]
name = "viscom-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "scipy>=1.15.2",
    "svgpathtools>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
